# pyGTFSHandler

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pruebas.ipynb  pyproject.toml  setup.py
docs/source/: conf.py  index.rst  modules.rst  pyGTFSHandler.downloaders.rst  pyGTFSHandler.downloaders.spain.rst  pyGTFSHandler.models.rst  pyGTFSHandler.rst
docs/source/guides/: Example_metro_madrid.ipynb
examples/: basic_example.ipynb  example.ipynb
pyGTFSHandler/: __init__.py  feed.py  gtfs_checker.py  plot_helper.py  plot_helpers.py  processing_helper.py  pruebas.ipynb  stack_gtfs.py  utils.py
pyGTFSHandler/downloaders/: mobility_database.py
pyGTFSHandler/downloaders/spain/: NAP.py
pyGTFSHandler/models/: __init__.py  calendar.py  routes.py  shapes.py  stop_times.py  stops.py  trips.py
pyGTFSHandler/scripts/: process_feed.py  stop_quality.py
tests/gtfs_files/gtfs_1/: calendar.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
tests/gtfs_files/gtfs_2/: agency.txt  calendar_dates.txt  frequencies.txt  stop_times.txt  stops.txt  trips.txt
tests/sample_gtfs_frequencies/: README.md  calendar.txt  calendar_dates.txt  frequencies.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
tests/sample_gtfs_midnight/: README.md  calendar.txt  calendar_dates.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
tests/sample_gtfs_minimal/: calendar.txt  calendar_dates.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
tutorial/: tutorial.ipynb
