[project]
name = "pyGTFSHandler"
version = "0.1.0"
description = "Handle GTFS files fast in python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "osmnx>=2.0.6",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pycountry>=24.6.1",
    "pyogrio>=0.11.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "furo>=2025.7.19",
    "nbsphinx>=0.9.6",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "sphinx>=8.2.3",
]
