[project]
name = "pyGTFSHandler"
version = "0.1.0"
description = "Handle GTFS files fast in python"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "geopandas>=1.1.1",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pycountry>=24.6.1",
    "pyogrio>=0.11.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
osm = ["osmnx>=2.0.6"]
plot = [
    "matplotlib>=3.8",
    "contextily>=1.6.0",
    "mapclassify>=2.10.0",
    "folium>=0.20.0",
    "streamlit-folium>=0.25.3",
    "plotly>=5.24.0",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
]

dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "black>=24.8.0",
    "ruff>=0.6.0",
]

docs = [
    "sphinx>=7.3.0",
    "myst-parser>=3.0.1",
    "furo>=2024.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyGTFSHandler*"]
